--- a/scss/main.css
+++ b/scss/main.css
@@ -19,18 +19,6 @@ body {
   background-color: #141414;
 }
 
-a {
-  cursor: pointer;
-}
-
-.background_accueil {
-  position: absolute;
-  z-index: 3;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
 .gradient-bar {
   position: absolute;
   bottom: 0;
@@ -38,37 +26,10 @@ a {
   left: 0;
   background: linear-gradient(to top, #121212, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
   height: 80px;
-  z-index: 1;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
 }
 
 .content {
   background-color: #141414;
-}
-
-.fixed {
-  position: fixed;
-}
-
-.noscroll {
-  overflow: hidden;
-}
-
-.display {
-  display: flex;
-}
-
-.hide {
-  display: none;
 }
 
 /* Styles du footer */
@@ -81,7 +42,7 @@ a {
 
 /* Styles de la barre de navigation */
 .navbar {
-  z-index: 3;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
@@ -105,8 +66,7 @@ a {
   gap: 20px;
 }
 .navbar__logo {
-  margin-top: 5px;
-  height: 20px;
+  height: 55px;
   margin-right: 20px;
 }
 .navbar__links {
@@ -153,7 +113,7 @@ a {
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
   padding: 0.8rem 1.8rem;
   border-radius: 4px;
@@ -163,17 +123,7 @@ a {
 .button:hover {
   opacity: 0.7;
 }
-.button--popup {
-  padding: 0.4rem 1.8rem;
-  font-size: 16px;
-}
-.button__playicon {
-  width: 23px;
-}
-.button__playicon--popup {
-  width: 18px;
-}
-.button__infoicon {
+.button__icon {
   width: 23px;
 }
 .button--grey {
@@ -184,30 +134,16 @@ a {
 .round-button {
   z-index: 2;
   width: 38px;
-  border: 2px solid #b5b5b5;
+  border: 1px solid white;
   border-radius: 35px;
   padding: 8px;
-  background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
 .round-button:hover {
   background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid white;
 }
 .round-button:active {
   background-color: rgba(212, 211, 211, 0.8);
-}
-.round-button__close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background-color: black;
-  width: 30px;
-  padding: 6px;
-  border: none;
-}
-.round-button__close:hover {
-  background-color: black;
 }
 
 .unmute-button {
@@ -224,25 +160,76 @@ a {
   display: none;
 }
 
-.popupUnmute-button {
-  display: none;
-}
-.popupUnmute-button--display {
-  display: flex;
-}
-
-.popupMute-button {
-  display: flex;
-}
-.popupMute-button--display {
-  display: none;
-}
-
 .replay-button {
   display: none;
 }
 .replay-button--display {
   display: flex;
+}
+
+.display {
+  display: flex;
+}
+
+.hide {
+  display: none;
+}
+
+.playlist {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-bottom: 50px;
+  overflow: scroll;
+}
+.playlist__title {
+  z-index: 2;
+  font-weight: 400;
+  margin: 0 3% 10px;
+  text-shadow: 1px 1px 4px black;
+}
+.playlist__list {
+  display: flex;
+  gap: 10px;
+}
+.playlist__prev {
+  z-index: 2;
+  width: 260px;
+  height: 140px;
+  opacity: 1;
+  border-radius: 4px;
+}
+
+.prev_1 {
+  background-image: url("assets/movies/godzilla2.png");
+  background-size: cover;
+  cursor: pointer;
+}
+.prev_2 {
+  background-image: url("assets/movies/transformers.png");
+  background-size: cover;
+  cursor: pointer;
+}
+.prev_3 {
+  background-image: url("assets/movies/transformers4.png");
+  background-size: cover;
+  cursor: pointer;
+}
+.prev_4 {
+  background-image: url("assets/movies/toute_la_lumiere.png");
+  background-size: cover;
+  cursor: pointer;
+}
+.prev_5 {
+  background-image: url("assets/movies/flash.png");
+  background-size: cover;
+  cursor: pointer;
+}
+.prev_6 {
+  background-image: url("assets/movies/one_piece.png");
+  background-size: cover;
+  cursor: pointer;
 }
 
 @keyframes video-opacity {
@@ -264,8 +251,18 @@ a {
   }
   100% {
     transform: translateY(135px);
-    scale: 0.7;
+    scale: 0.5;
     transform-origin: 0% 100%;
+  }
+}
+@keyframes resume-opacity {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(30px);
   }
 }
 @keyframes translate-title-rewind {
@@ -280,38 +277,14 @@ a {
     transform-origin: 0% 100%;
   }
 }
-@keyframes resume-opacity {
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-    scale: 1;
-    transform-origin: 0% 100%;
-  }
-  75% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(90px);
-    scale: 0;
-    transform-origin: 0% 100%;
-  }
-}
 @keyframes resume-opacity-rewind {
   0% {
     opacity: 0;
     transform: translateY(30px);
-    scale: 0;
-    transform-origin: 0% 100%;
-  }
-  75% {
-    opacity: 1;
   }
   100% {
     opacity: 1;
     transform: translateY(0);
-    scale: 1;
-    transform-origin: 0% 100%;
   }
 }
 .animation-hero__video {
@@ -327,11 +300,11 @@ a {
   animation: resume-opacity 1000ms 2000ms forwards;
 }
 .animation-hero__resume--rewind {
-  animation: resume-opacity-rewind 1000ms forwards;
+  animation: resume-opacity-rewind 500ms forwards;
 }
 
 .hero {
-  background-image: url("assets/media/cover/avatar.png");
+  background-image: url("assets/movie/movie-prev.jpg");
   background-size: cover;
   background-color: #fff;
   height: 100vh;
@@ -339,36 +312,24 @@ a {
   text-align: center;
   padding: 100px 0;
   margin-bottom: 50px;
-  padding-top: 200px;
-  padding-bottom: 400px;
 }
 .hero__prev {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 40%;
-  height: 60vh;
-}
-.hero__infos {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  padding: 38px;
-  height: 50vh;
+  margin: 140px 3%;
 }
 .hero__title {
   z-index: 2;
-  width: 20vw;
+  width: 550px;
   margin-bottom: 20px;
 }
 .hero__resume {
   z-index: 2;
-  min-height: 10vh;
-  overflow: scroll;
   text-align: left;
   margin-bottom: 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
   text-shadow: 1px 1px 4px black;
 }
@@ -393,124 +354,10 @@ a {
   bottom: 35vh;
 }
 .hero__video {
-  z-index: 1;
   position: absolute;
-  width: 100%;
-  height: 100%;
   top: 0;
-  left: 0;
-  object-fit: cover;
-}
-
-@keyframes popup {
-  0% {
-    opacity: 0.5;
-    transform: scale(0.8);
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-@keyframes popup-rewind {
-  0% {
-    opacity: 1;
-    transform: scale(1);
-  }
-  75% {
-    opacity: 0.8;
-    transform: scale(0.8);
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0);
-  }
-}
-.popup {
-  z-index: 3;
-  position: fixed;
-  top: 5%;
-  left: 25%;
-  width: 55vw;
-  background-color: #121212;
-  border-radius: 1%;
-  transform: translate(-50%, -50%);
-  animation: popup 400ms ease-in-out forwards;
-}
-.popup--rewind {
-  animation: popup-rewind 400ms ease-in-out forwards;
-}
-.popup__video {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-}
-.popup__header {
-  background-image: url("assets/media/cover/avatar.png");
-  background-size: cover;
-  background-color: #121212;
-  border-top-right-radius: 1%;
-  border-top-left-radius: 1%;
-  height: 500px;
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%;
-  overflow: hidden;
-  padding: 40px;
-  padding-bottom: 70px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-.popup__title {
-  z-index: 2;
-  width: 40%;
-  margin-bottom: 20px;
-}
-.popup__controls {
-  z-index: 2;
-  gap: 10px;
-  justify-content: flex-start;
-}
-.popup__gradient {
-  z-index: 2;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   right: 0;
-  height: 80px;
-  background: linear-gradient(to top, #121212, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
-}
-.popup__description {
-  padding: 40px;
-}
-.popup__description--infos {
-  color: grey;
-  font-size: 14px;
-  font-weight: 400;
-  margin-right: 10px;
-  margin-bottom: 30px;
-}
-.popup__description--resume {
-  text-align: left;
-  font-weight: 300;
-  font-size: 14px;
-}
-
-.fullrow {
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 100%;
-}
-
-/*# sourceMappingURL=style.css.map */
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+}/*# sourceMappingURL=main.css.map */
